--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,17 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>EdFisica - Cloud</ion-title>
+    <ion-title >EdFisica - Cloud</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Avaliações e Calculadoras</h3>
+  <h2 class="corTitulo">Avaliações Físicas</h2>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+<ion-card>
+  <img class="logoTipo" src="/assets/icon/edFisica.png"/>
+  
+  <button ion-button block > Login </button>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+</ion-card>
 </ion-content>
