--- a/src/pages/calculadoras/calculadoras.html
+++ b/src/pages/calculadoras/calculadoras.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon name="arrow-back"></ion-icon>
     </button>
     <ion-title>Calculadoras</ion-title>
   </ion-navbar>
