homepage and icons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,20 +15,44 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content no-padding>
-  <h2 class="corTitulo">Avaliações Físicas</h2>
-  <ion-row>
-  <ion-card col-5>
-    <img src="img/card-saopaolo.png"/>
-    <div class="card-title">São Paulo</div>
-    <div class="card-subtitle">41 Listings</div>
-  </ion-card>
+<ion-content padding>
 
-  <ion-card col-5>
-    <ion-icon name="add-circle"></ion-icon>
-    <div class="card-title">Amsterdam</div>
-    <div class="card-subtitle">64 Listings</div>
-  </ion-card>
+  <img class="logoTipo2" src="/assets/icon/edFisica2.png"/>
+  <!-- <h3 align="center">Avaliações Físicas</h3> -->
+
+  <ion-row>
+    <ion-card col-5>
+      <img class="card-ion-icon" src="/assets/icon/avaliacao.png"/>
+      <div class="card-subtitle">Avaliações</div>
+    </ion-card>
+
+    <ion-card col-5>
+      <img class="card-ion-icon" src="/assets/icon/calculadora.png"/>
+      <div class="card-subtitle">Calculadoras</div>
+    </ion-card>
   </ion-row>
- 
+
+  <ion-row>
+    <ion-card col-5>
+      <img class="card-ion-icon" src="/assets/icon/grafico.png"/>
+      <div class="card-subtitle">Gráficos</div>
+    </ion-card>
+  
+    <ion-card col-5>
+      <img class="card-ion-icon" src="/assets/icon/mensagem.png"/>
+      <div class="card-subtitle">Mensagens</div>
+    </ion-card>
+  </ion-row> 
+
+    <ion-row>
+      <ion-card col-5>
+        <img class="card-ion-icon" src="/assets/icon/usuarios.png"/>
+        <div class="card-subtitle">Usuários</div>
+      </ion-card>
+    
+      <ion-card col-5>
+        <img class="card-ion-icon" src="/assets/icon/logout.png"/>
+        <div class="card-subtitle">Sair</div>
+      </ion-card>
+      </ion-row> 
 </ion-content>
