--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 
 <ion-content padding>
 
-  <h1 align="center">Login</h1>
+  <!-- <h1 align="center">Login</h1> -->
   <ion-card>
   <img class="logoTipo" src="/assets/icon/edFisica.png"/>
 
