tela login - buttons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,14 +11,13 @@
             <ion-icon name="contact"></ion-icon>
           </button>
     </ion-buttons>
-    <ion-title>EdFisica - Cloud</ion-title>
+    <ion-title class="corTitulo">EdFisica - Cloud</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
 
   <img class="logoTipo2" src="/assets/icon/edFisica2.png"/>
-  <!-- <h3 align="center">Avaliações Físicas</h3> -->
 
   <ion-row>
     <ion-card col-5 *ngFor="let item of items" (click)="acessar(item)">
