--- a/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.html
+++ b/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.html
@@ -10,152 +10,205 @@
 							<div class="col-md-8" style="margin-top:20px;margin-bottom:20px;">
 										<!-- <h2>Fatores de Risco Coronariano</h2> -->
 												<div id="titulo"> 1 - Histórico Familiar de Doenças Cardíacas </div>
+												<p></p>
 												<div class="alpaca-control radio">
-													<label style="padding-right: 10%" >
-														<input type="radio" name="opcao1">
-														Normal
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao1">
-														   1 acima de 50 anos
-													</label>
-													<label>
-														<input type="radio" name="opcao1">
-														   1 abaixo de 50 anos
-													</label>
+														<label>
+															<input type="radio" name="opcao1">
+															Normal
+														</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao1">
+																1 acima de 50 anos
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao1">
+																1 abaixo de 50 anos
+														</label>
+													</div>
 												</div>
 												 <p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 2 - Eletrocardiograma de Repouso </div>
+												<p></p>
 												<div class="alpaca-control radio">
-													<label style="padding-right: 10%" >
-														<input type="radio" name="opcao2">
-														Negativo
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao2">
-														   Duvidoso
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao2">
-														   Positivo
-													</label>
+														<label>
+															<input type="radio" name="opcao2">
+															Negativo
+														</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao2">
+																Duvidoso
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao2">
+																Positivo
+														</label>
+													</div>
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 3 - Eletrocardiograma em Exercício </div>
+												<p></p>
 												<div class="alpaca-control radio">
-													<label style="padding-right: 10%" >
-														<input type="radio" name="opcao3">
-														Negativo
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao3">
-														   Duvidoso
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao3">
-														   Positivo
-													</label>
+														<label>
+															<input type="radio" name="opcao3">
+															Negativo
+														</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao3">
+																Duvidoso
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label >
+															<input type="radio" name="opcao3">
+																Positivo
+														</label>
+													</div>
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 4 - Fumo - Cigarros/Dia </div>
+												<p></p>
 												<div class="alpaca-control radio">
-													<label style="padding-right: 10%" >
-														<input type="radio" name="opcao4">
-														Nenhum
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao4">
-														   Entre 1 e 10
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao4">
-														   Entre 11 e 30
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao4">
-														   31 ou Mais
-													</label>
+														<label>
+															<input type="radio" name="opcao4">
+															Nenhum
+														</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao4">
+																Entre 1 e 10
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao4">
+																Entre 11 e 30
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao4">
+																31 ou Mais
+														</label>
+													</div>
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 5 - Excesso de Peso Corporal </div>
+												<p></p>
 												<div class="alpaca-control radio">
-													<label style="padding-right: 10%" >
-														<input type="radio" name="opcao5">
-														Normal
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao5">
-														   Entre 10% e 15%
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao5">
-														   Mais de 15%
-													</label>
+														<label>
+															<input type="radio" name="opcao5">
+															Normal
+														</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao5">
+																Entre 10% e 15%
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label >
+															<input type="radio" name="opcao5">
+																Mais de 15%
+														</label>
+													</div>
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 6 - Prática de Atividade Física </div>
+												<p></p>
 												<div class="alpaca-control radio">
-													<label style="padding-right: 10%" >
+													<label >
 														<input type="radio" name="opcao6">
 														Regular
 													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao6">
-														   Infrequente
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao6">
-														   Nenhuma
-													</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao6">
+																Infrequente
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao6">
+																Nenhuma
+														</label>
+													</div>
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 7 - Nível de Colesterol Total </div>
+												<p></p>
 												<div class="alpaca-control radio">
 													<label style="padding-right: 10%" >
 														<input type="radio" name="opcao7">
 														200
 													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao7">
-														   Entre 201 e 230
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao7">
-														   Entre 231 e 245
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao7">
-														   Entre 246 e 275
-													</label><label style="padding-right: 10%">
-														<input type="radio" name="opcao7">
-														   Mais de 276
-													</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao7">
+																Entre 201 e 230
+														</label>
+													</div>
+													<div class="alpaca-control radio">	
+														<label>
+															<input type="radio" name="opcao7">
+																Entre 231 e 245
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label >
+															<input type="radio" name="opcao7">
+																Entre 246 e 275
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao7">
+																Mais de 276
+														</label>
+													</div>	
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 8 - Nível de Triglicérides </div>
+												<p></p>
 												<div class="alpaca-control radio">
-													<label style="padding-right: 10%" >
+													<label >
 														<input type="radio" name="opcao8">
 														80
 													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao8">
-														   Entre 81 e 115
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao8">
-														   Entre 116 e 150
-													</label>
-													<label style="padding-right: 10%">
-														<input type="radio" name="opcao8">
-														   Entre 151 e 250
-													</label><label style="padding-right: 10%">
-														<input type="radio" name="opcao8">
-														   Mais de 251
-													</label>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao8">
+																Entre 81 e 115
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label >
+															<input type="radio" name="opcao8">
+																Entre 116 e 150
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label >
+															<input type="radio" name="opcao8">
+																Entre 151 e 250
+														</label>
+													</div>
+													<div class="alpaca-control radio">
+														<label>
+															<input type="radio" name="opcao8">
+																Mais de 251
+														</label>
+													</div>
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 9 - Nível de Glicose Sanguínea </div>
+												<p></p>
 												<div class="alpaca-control radio">
                             <label  >
                               <input type="radio" name="opcao9">
@@ -188,6 +241,7 @@
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 10 - Nível de Estresse </div>
+												<p></p>
 												<div class="alpaca-control radio">
 													<label >
 														<input type="radio" name="opcao10">
@@ -220,6 +274,7 @@
 												</div>
 												<p></p> <!-- espaço entre as questoes -->
 												<div id="titulo"> 11 - Pressão Arterial </div>
+												<p></p>
 												<div class="alpaca-control radio">
 													<label >
 														<input type="radio" name="opcao11">
