--- a/src/pages/avaliacoes/avaliacao-fisica/avaliacao-fisica.html
+++ b/src/pages/avaliacoes/avaliacao-fisica/avaliacao-fisica.html
@@ -13,6 +13,110 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+    <div class="container"style="padding-right: 2%;padding-left: 2%">
+        <div class="col-md-8" style="margin-top:20px;margin-bottom:20px;">
+                  <div>
+                          <div >
+                              <div id="titulo"> 1 - Intensidade </div>
+                          </div>
+                          <p></p>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao1">
+                                  Muito Leve
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao1" >
+                                  Leve
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao1" >
+                                  Discreta Respiração e Freqüência Cardíaca
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao1">
+                                  Moderada Respiração e Freqüência Cardíaca
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao1">
+                                  Intensa respiração e Freqüência Cardíaca
+                              </label>
+                          </div>
+                          <p></p>
+                          <div >
+                              <div id="titulo"> 2 - Frequência </div>
+                          </div>
+                          <p></p>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao2">
+                                  Nenhuma ou raramente
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao2">
+                                  Algumas vezes por Mês
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao2">
+                                  De uma a duas vezes por semana
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao2">
+                                  De 3 a 5 vezes por semana
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao2">
+                                  Diariamente ou quase diariamente
+                              </label>
+                          </div>
+                          <p></p>
+                          <div >
+                              <div id="titulo"> 3 - Duração </div>
+                          </div>
+                          <p></p>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao3">
+                                  Menos de 10 minutos
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao3">
+                                  De 10 a 20 minutos
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao3">
+                                  De 20 a 30 minutos
+                              </label>
+                          </div>
+                          <div class="alpaca-control radio">
+                              <label>
+                                  <input type="radio" name="opcao">
+                                  Acima de 30 minutos
+                              </label>
+                          </div>
+                   </div>
+                   <button ion-button block (click)="resultado()"> Resultado </button> 
+        </div>
+    </div>   
 </ion-content>
