--- a/src/pages/calculadoras/calculadora-1rm/calculadora-1rm.html
+++ b/src/pages/calculadoras/calculadora-1rm/calculadora-1rm.html
@@ -1,18 +1,21 @@
-<!--
-  Generated template for the Calculadora1RmPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>calculadora1RM</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
+  <ion-list>
+      <ion-item>
+        <ion-input type="number" placeholder="Peso"></ion-input>
+      </ion-item>
+    
+      <ion-item>
+        <ion-input type="number" placeholder="Máxima Repetições"></ion-input>
+      </ion-item>
+      <ion-item>
+        <button ion-button > Resultado </button>
+      </ion-item>
+  </ion-list>
 </ion-content>
