--- a/src/pages/calculadoras/calculadora-fcm/calculadora-fcm.html
+++ b/src/pages/calculadoras/calculadora-fcm/calculadora-fcm.html
@@ -13,6 +13,29 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-list>
+      <ion-item>
+        <ion-label>Sexo</ion-label>
+          <ion-select [(ngModel)]="sexo">
+            <ion-option value="masc">Masculino</ion-option>
+            <ion-option value="fem">Feminino</ion-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+            <ion-label fixed>Idade</ion-label>
+            <ion-input type="number" value=""></ion-input>
+        </ion-item>
+        <p></p>
+        <div class="input-group"style="padding-left: 50%;">
+          <span class="input-group-addon">Resultado: </span>
+          <input id="fcmResult" name="Resultado" class="form-control" placeholder="" required="" readonly="readonly" type="text">
+        </div>
 
+        <ion-item >
+            <button ion-button  > Resultado </button>
+        </ion-item>
+
+
+  </ion-list>
 </ion-content>
