--- a/src/pages/calculadoras/calculadora-1rm/calculadora-1rm.html
+++ b/src/pages/calculadoras/calculadora-1rm/calculadora-1rm.html
@@ -14,6 +14,11 @@
       <ion-item>
         <ion-input type="number" placeholder="Máxima Repetições"></ion-input>
       </ion-item>
+      <p></p>
+      <div class="input-group"style="padding-left: 50%;">
+        <span class="input-group-addon">Resultado: </span>
+        <input id="umrmResult" name="Resultado" class="form-control" placeholder="" required="" readonly="readonly" type="text">
+      </div>
       <ion-item>
         <button ion-button > Resultado </button>
       </ion-item>
