--- a/src/pages/calculadoras/calculadora-rcq/calculadora-rcq.html
+++ b/src/pages/calculadoras/calculadora-rcq/calculadora-rcq.html
@@ -14,5 +14,22 @@
 
 
 <ion-content padding>
+    <ion-list>
+        <ion-item>
+          <ion-input type="number" placeholder="Circunferência da Cintura"></ion-input>
+        </ion-item>
+      
+        <ion-item>
+          <ion-input type="number" placeholder="Circunferência do Quadril"></ion-input>
+        </ion-item>
+        <p></p>
+        <div class="input-group"style="padding-left: 50%;">
+          <span class="input-group-addon">Resultado: </span>
+          <input id="rcqResult" name="Resultado" class="form-control" placeholder="" required="" readonly="readonly" type="text">
+        </div>
+        <ion-item>
+          <button ion-button > Resultado </button>
+        </ion-item>
+    </ion-list>
 
 </ion-content>
