--- a/src/pages/calculadoras/calculadora-imc/calculadora-imc.html
+++ b/src/pages/calculadoras/calculadora-imc/calculadora-imc.html
@@ -14,12 +14,12 @@
 <ion-content >
     <ion-list>
         <ion-item>
-          <ion-label stacked>Peso</ion-label>
+          <ion-label fixed>Peso</ion-label>
           <ion-input type="float"></ion-input>
         </ion-item>
       
         <ion-item>
-          <ion-label stacked>Altura</ion-label>
+          <ion-label fixed>Altura</ion-label>
           <ion-input type="int"></ion-input>
         </ion-item>
         <p></p>
@@ -27,8 +27,9 @@
           <span class="input-group-addon">Resultado: </span>
           <input id="imcResult" name="Resultado" class="form-control" placeholder="" required="" readonly="readonly" type="text">
         </div>
-      
-        <button ion-button>Resultado</button>
+        <ion-item >
+          <button ion-button  > Resultado </button>
+        </ion-item>
     </ion-list>
 
 
