--- a/src/pages/calculadoras/calculadora-1rm/calculadora-1rm.html
+++ b/src/pages/calculadoras/calculadora-1rm/calculadora-1rm.html
@@ -12,7 +12,7 @@
       </ion-item>
     
       <ion-item>
-        <ion-input type="number" placeholder="Máxima Repetições"></ion-input>
+        <ion-input type="number" placeholder="Máximo de Repetições"></ion-input>
       </ion-item>
       <p></p>
       <div class="input-group"style="padding-left: 50%;">
