botao cadastrar na home e page lista-pacientes

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,9 +7,9 @@
     </ion-buttons>
 
     <ion-buttons end>
-      <button ion-button icon-only>
-            <ion-icon name="contact"></ion-icon>
-          </button>
+      <button ion-button icon-only (click)="acessarCadastro()">
+            <ion-icon name="add-circle"></ion-icon>
+      </button>
     </ion-buttons>
     <ion-title class="corTitulo">EdFisica - Cloud</ion-title>
   </ion-toolbar>
