--- a/src/pages/lista-pacientes/lista-pacientes.html
+++ b/src/pages/lista-pacientes/lista-pacientes.html
@@ -1,15 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>listaPacientes</ion-title>
+    <ion-title>Pacientes</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
 <ion-list>
-  <ion-item>
-    <ion-label fixed>Paciente:</ion-label>
-    <ion-input type="text" [(ngModel)]="pacientes.nome"></ion-input>
-  </ion-item>
+  <!-- <ion-item *ngFor = "let item of listaPacientes">
+    {{item}}
+  </ion-item> -->
 </ion-list>
 
 </ion-content>
