app funcionando novamente

--- a/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.html
+++ b/src/pages/avaliacoes/avaliacao-coronariano/avaliacao-coronariano.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content >
-			<div class="container";padding-left: 2%">
+			<div class="container"style="padding-right: 2%;padding-left: 2%">
 							<div class="col-md-8" style="margin-top:20px;margin-bottom:20px;">
 										<!-- <h2>Fatores de Risco Coronariano</h2> -->
 												<div id="titulo"> 1 - Histórico Familiar de Doenças Cardíacas </div>
