--- a/src/pages/calculadoras/calculadora-imc/calculadora-imc.html
+++ b/src/pages/calculadoras/calculadora-imc/calculadora-imc.html
@@ -15,7 +15,7 @@
   <ion-list>
     <ion-item>
       <ion-label>Sexo</ion-label>
-        <ion-select [(ngModel)]="imc.sexo" interface="popover">
+        <ion-select [(ngModel)]="imc.sexo">
           <ion-option value="masc">Masculino</ion-option>
           <ion-option value="fem">Feminino</ion-option>
         </ion-select>
