--- a/src/pages/calculadoras/calculadora-fcm/calculadora-fcm.html
+++ b/src/pages/calculadoras/calculadora-fcm/calculadora-fcm.html
@@ -17,7 +17,7 @@
   <ion-list>
       <ion-item>
         <ion-label>Sexo</ion-label>
-          <ion-select [(ngModel)]="fcm.sexo" interface="popover">
+          <ion-select [(ngModel)]="fcm.sexo">
             <ion-option value="masc">Masculino</ion-option>
             <ion-option value="fem">Feminino</ion-option>
           </ion-select>
