calculador 1 rm pronta

--- a/src/pages/calculadoras/calculadora-7dobras/calculadora-7dobras.html
+++ b/src/pages/calculadoras/calculadora-7dobras/calculadora-7dobras.html
@@ -17,7 +17,7 @@
     <ion-list>
         <ion-item>
             <ion-label>Sexo</ion-label>
-            <ion-select [(ngModel)]="sexo">
+            <ion-select [(ngModel)]="setesexo" interface="popover">
               <ion-option value="masc">Masculino</ion-option>
               <ion-option value="fem">Feminino</ion-option>
             </ion-select>
